--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="beranda">
   <div class="container">
-  <a class="navbar-brand" href="#beranda">INTrior</a>
+  <a class="navbar-brand" href="#beranda"><span>INT</span>rior</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
