Merubah text button di jumbotron

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container">
     <h1 class="display-4">INTERIOR DESIGN</h1>
     <form method="post" action="#portofolio">
-      <button class="btn btn-outline-light my-2 my-sm-0" id="btn" type="submit">OUR PORTOFOLIO</button>
+      <button class="btn btn-outline-light my-2 my-sm-0" id="btn" type="submit">PORTOFOLIO KAMI</button>
     </form>
   </div>
 </div>
