Menambahkan border pada navbar-brand di versi mobile

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="col-md-3 pt-5 text-justify">
         <img src="assets/icons/check.png"> <p>PRODUK DIPASARAN</p>
           <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">45%</div>
+            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 65%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">65%</div>
           </div>
       </div>
       <div class="col-md-3 pt-5 text-justify">
@@ -111,13 +111,13 @@
       <div class="col-md-3 pt-5 text-justify">
         <img src="assets/icons/partner.png"> <p>PARTNER</p>
           <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">45%</div>
+            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
           </div>
       </div>
       <div class="col-md-3 pt-5 text-justify">
         <img src="assets/icons/trophy.png"> <p>PENGEHARGAAN</p>
           <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 35%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35%</div>
+            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
           </div>
       </div>
     </div>
@@ -166,7 +166,7 @@
         <img src="assets/img/p4.jpg" style="height: 280px;">
         <div class="caption">
           <h3>Kamar Mandi</h3>
-          <p><b>INTrior</b> menyediakan interior di kamar manadi, seperti bathub, meja dan lain-lain.</p>
+          <p><b>INTrior</b> menyediakan interior di kamar mandi, seperti bathub, meja dan lain-lain.</p>
         </div>
       </div>
     </div>
