Merubah margin image tentang, pencapaian, dan partner di versi mobile

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <p class="pt-3 pl-4 pr-4">INTrior didirikan pada tahun 2017, di Bandung.</p>
     </div>
     <div class="col-md-4 pt-4 text-justify">
-      <img src="assets/icons/visi.png" style="margin-right: -10px;">
+      <img src="assets/icons/visi.png">
       <h5>Misi</h5>
        <p class="pt-3 pl-4 pr-4">- Menjadi pemasok keperluan interior dan furnitur terbesar di luar negeri dan dalam negeri <br>
        - Menjadikan produk INTrior mampu bersaing dengan produk lain di pasar Internasional <br>
